Add constraint-safe first-feasible policy selectors